--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
         "@tailwindcss/vite": "^4.0.6",
+        "axios": "^1.9.0",
         "chart.js": "^4.4.7",
+        "pinia": "^3.0.2",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.0",
         "tailwindcss": "^4.0.6",
