--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue --fix",
+        "lint:fix": "npm run lint -- --fix"
     },
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
@@ -21,9 +23,18 @@
         "vue-router": "^4.5.1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.27.0",
         "@primevue/auto-import-resolver": "^4.3.1",
         "@vitejs/plugin-vue": "^5.0.5",
+        "eslint": "^9.27.0",
+        "eslint-plugin-vue": "^10.1.0",
+        "globals": "^16.1.0",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.32.1",
         "unplugin-vue-components": "^28.4.0",
-        "vite": "^5.2.13"
+        "vite": "^5.2.13",
+        "vite-plugin-checker": "^0.9.3",
+        "vite-plugin-eslint": "^1.8.1",
+        "vue-tsc": "^2.2.10"
     }
 }
