--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue --fix",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue ",
         "lint:fix": "npm run lint -- --fix"
     },
     "dependencies": {
