--- a/package.json
+++ b/package.json
@@ -10,32 +10,31 @@
         "lint:fix": "npm run lint -- --fix"
     },
     "dependencies": {
- 
+        "@primeuix/themes": "^1.0.0",
         "@quasar/vite-plugin": "^1.9.0",
         "@tailwindcss/vite": "^4.0.6",
-        "@primeuix/themes": "^1.0.0",
         "axios": "^1.9.0",
         "pinia": "^3.0.2",
         "primeicons": "^7.0.0",
-        "tailwindcss": "^4.0.6",
         "primevue": "^4.3.0",
+        "tailwindcss": "^4.0.6",
+        "tailwindcss-primeui": "^0.5.0",
         "vue": "^3.4.27",
-        "vue-router": "^4.5.1",
-         "tailwindcss-primeui": "^0.5.0"       
+        "vue-router": "^4.5.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.27.0",
+        "@primevue/auto-import-resolver": "^4.3.1",
         "@vitejs/plugin-vue": "^5.0.5",
         "eslint": "^9.27.0",
         "eslint-plugin-vue": "^10.1.0",
         "globals": "^16.1.0",
-         "typescript": "^5.8.3",
+        "typescript": "^5.8.3",
         "typescript-eslint": "^8.32.1",
+        "unplugin-vue-components": "^28.4.0",
         "vite": "^5.2.13",
         "vite-plugin-checker": "^0.9.3",
         "vite-plugin-eslint": "^1.8.1",
-        "vue-tsc": "^2.2.10",
-         "@primevue/auto-import-resolver": "^4.3.1",
-         "unplugin-vue-components": "^28.4.0"
+        "vue-tsc": "^2.2.10"
     }
 }
