--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     },
     "dependencies": {
         "@primeuix/themes": "^1.0.0",
+        "@primevue/forms": "^4.3.5",
         "@quasar/vite-plugin": "^1.9.0",
         "@tailwindcss/vite": "^4.0.6",
+        "@vee-validate/zod": "^4.15.1",
         "axios": "^1.9.0",
         "pinia": "^3.0.2",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.0",
         "tailwindcss": "^4.0.6",
         "tailwindcss-primeui": "^0.5.0",
+        "vee-validate": "^4.15.1",
         "vue": "^3.4.27",
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "zod": "^3.25.64"
     },
     "devDependencies": {
         "@eslint/js": "^9.27.0",
